--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ project.lock.json
 project.fragment.lock.json
 profile.arm.json
 artifacts/
-**/Properties/launchSettings.json
+#**/Properties/launchSettings.json
 
 # StyleCop
 StyleCopReport.xml
